Add function and excel

--- a/Evol_ReducedDim_Analysis.ipynb
+++ b/Evol_ReducedDim_Analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,96 +88,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.concat?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0        191002_Beto_selectivity_basic(1)\n",
-       "1           191002_Beto_generate_parallel\n",
-       "2           191003_Beto_selectivity_basic\n",
-       "3           191003_Beto_generate_parallel\n",
-       "4        191007_Beto_selectivity_basic(1)\n",
-       "5        191007_Beto_generate_parallel(2)\n",
-       "6           191008_Beto_selectivity_basic\n",
-       "7        191008_Beto_generate_parallel(2)\n",
-       "8           191009_Beto_selectivity_basic\n",
-       "9        191009_Beto_generate_parallel(1)\n",
-       "10          191010_Beto_selectivity_basic\n",
-       "11       191010_Beto_generate_parallel(1)\n",
-       "12          191011_Beto_selectivity_basic\n",
-       "13          191011_Beto_generate_parallel\n",
-       "14          191015_Beto_selectivity_basic\n",
-       "15       191015_Beto_generate_parallel(2)\n",
-       "16          191016_Beto_selectivity_basic\n",
-       "17          191016_Beto_generate_parallel\n",
-       "18          191017_Beto_selectivity_basic\n",
-       "19       191017_Beto_generate_parallel(3)\n",
-       "20          191030_Beto_selectivity_basic\n",
-       "21          191030_Beto_generate_parallel\n",
-       "22          191031_Beto_selectivity_basic\n",
-       "23          191031_Beto_generate_parallel\n",
-       "24          191105_Beto_selectivity_basic\n",
-       "25       191105_Beto_generate_parallel(1)\n",
-       "26          191106_Beto_selectivity_basic\n",
-       "27          191106_Beto_generate_parallel\n",
-       "28       191106_Beto_selectivity_basic(1)\n",
-       "29       191106_Beto_generate_parallel(1)\n",
-       "                      ...                \n",
-       "112         191205_Beto_rfMapper_basic(1)\n",
-       "113      191205_Beto_generate_parallel(1)\n",
-       "114            200123_Beto_rfMapper_basic\n",
-       "115       200123_Beto_generate_integrated\n",
-       "116            200127_Beto_rfMapper_basic\n",
-       "117       200127_Beto_generate_integrated\n",
-       "118    200127_Beto_generate_integrated(1)\n",
-       "119            200130_Beto_rfMapper_basic\n",
-       "120       200130_Beto_generate_integrated\n",
-       "121    200130_Beto_generate_integrated(1)\n",
-       "122         200130_Beto_rfMapper_basic(1)\n",
-       "123         200130_Beto_rfMapper_basic(2)\n",
-       "124    200130_Beto_generate_integrated(2)\n",
-       "125            200203_Beto_rfMapper_basic\n",
-       "126       200203_Beto_generate_integrated\n",
-       "127    200203_Beto_generate_integrated(1)\n",
-       "128            200204_Beto_rfMapper_basic\n",
-       "129         200204_Beto_rfMapper_basic(1)\n",
-       "130       200204_Beto_generate_integrated\n",
-       "131    200204_Beto_generate_integrated(1)\n",
-       "132            200225_Beto_rfMapper_basic\n",
-       "133         200225_Beto_rfMapper_basic(1)\n",
-       "134    200225_Beto_generate_integrated(1)\n",
-       "135    200225_Beto_generate_integrated(2)\n",
-       "136    200225_Beto_generate_integrated(3)\n",
-       "137    200225_Beto_generate_integrated(4)\n",
-       "138            200226_Beto_rfMapper_basic\n",
-       "139         200226_Beto_rfMapper_basic(1)\n",
-       "140    200226_Beto_generate_integrated(1)\n",
-       "141    200226_Beto_generate_integrated(2)\n",
-       "Name: expControlFN, Length: 142, dtype: object"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_formal.expControlFN"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
    "outputs": [
@@ -198,41 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "200226_Beto_rfMapper_basic  has been recorded in the excel index 138, please check\n",
-      "200226_Beto_rfMapper_basic(1)  has been recorded in the excel index 139, please check\n",
-      "200226_Beto_generate_integrated(1)  has been recorded in the excel index 140, please check\n",
-      "200226_Beto_generate_integrated(2)  has been recorded in the excel index 141, please check\n"
-     ]
-    },
-    {
-     "ename": "SyntaxError",
-     "evalue": "'return' outside function (<ipython-input-39-f61315088d05>, line 7)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-39-f61315088d05>\"\u001b[1;36m, line \u001b[1;32m7\u001b[0m\n\u001b[1;33m    return\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m 'return' outside function\n"
-     ]
-    }
-   ],
-   "source": [
-    "break_flag = False\n",
-    "for name in df_sort.expControlFN:\n",
-    "    if (df_formal.expControlFN==name).any():\n",
-    "        print(\"%s  has been recorded in the excel index %d, please check\"%(name, (df_formal.expControlFN==name).nonzero()[0][0]))\n",
-    "        break_flag = True\n",
-    "if break_flag:\n",
-    "    return"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -268,37 +144,58 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Exp 0\t Beto-26022020-001\t 200226_Beto_rfMapper_basic\n",
+      "Exp 0\t Beto-03032020-001\t 200303_Beto_rfMapper_basic\n",
       "001 RFMapping\n",
       "-1.5:0.5:1.5 0.75 deg\n",
-      "Chn5 seems good\n",
-      "Works pretty well today! Finish 5 blocks in 3mins\n",
-      "Finish 7 blocks in 5mins\n",
+      "24 has a single unit vs hash structure?\n",
       "\n",
-      "Exp 1\t Beto-26022020-002\t 200226_Beto_rfMapper_basic(1)\n",
+      "Exp 1\t Beto-03032020-002\t 200303_Beto_rfMapper_basic(1)\n",
       "002 RFMapping\n",
       "-8:2:8 2 deg\n",
-      "Chn 5 seems good\n",
-      "Finish in 6min\n",
-      "5 17 18 19 20 are good\n",
-      "Try to fix the save resolution of PostHoc Analysis.\n",
+      "Chan 24's RF looks good and\n",
+      "003 generate integrated\n",
+      "24 [-0.8 1] 3 1 ZOHA_Cylind\n",
+      "24 [-0.8 1] 3 1 ZOHA_Cylind_ReducDim\n",
+      "Forget to change the reference image!\n",
+      "Abort the exp\n",
+      "Aborted\n",
       "\n",
-      "Exp 2\t Beto-26022020-003\t 200226_Beto_generate_integrated(1)\n",
-      "003 Generate Integrated starts 12:58\n",
-      "Chan 5 Evolution\n",
-      "5 [-0.5 1] 3 1 CMAES_RD\n",
-      "5 [-0.5 1] 3 1 CMAES\n",
-      "33min 40generations\n",
+      "Exp 2\t Beto-03032020-004\t 200303_Beto_generate_integrated(4)\n",
+      "004 generate_integrated starts 12:35\n",
+      "Change the reference image!\n",
+      "24 [-0.8 1] 3 1 ZOHA_Cylind\n",
+      "24 [-0.8 1] 3 1 ZOHA_Cylind_ReducDim\n",
+      "The reduced dimension one evolved, the full space didn't\n",
+      "Seems the major contribution to evolution is the initial activity peak in the response.\n",
+      "The high noise caused the norm evolution not working totally! So in full evolution, the Optimizer stuck at low norm and still live in noise.\n",
+      "The low variability problem is big!\n",
+      "Or maybe the norm evolution is not well controlled.\n",
+      "Interesting case study.….\n",
+      "Completed\n",
       "\n",
-      "Exp 3\t Beto-26022020-004\t 200226_Beto_generate_integrated(2)\n",
-      "004 Generate Integrated 13:36\n",
-      "Chan 20 Evolution\n",
-      "20 [-1 1] 3 1 CMAES_RD\n",
-      "20 [-1 1] 3 1 CMAES\n",
-      "May lose the first trial…. Start Plexon recording later than ML2 starts (I bet we are fine….? )\n",
-      "Monkey starting to protest…\n",
-      "gets to gen 30!\n",
-      "Actually the fr declines in the last few gens.\n"
+      "Exp 3\t Beto-03032020-005\t 200303_Beto_generate_integrated(5)\n",
+      "005generate_integrated starts 1:01\n",
+      "24 [-0.8 1] 3 1 CMAES\n",
+      "24 [-0.8 1] 3 2 CMAES\n",
+      "SU vs Hash type experiment! Also want to check if CMA is able to evolve from this thing. \n",
+      "He started today around noon, so working for 1.5 hr so far\n",
+      "130 ms reward\n",
+      "The \"SU\" seems moving towards the hash, and the score gets lower. (Lose the unit totally)\n",
+      "Interesting case study.….\n",
+      "Completed\n",
+      "\n",
+      "Exp 4\t Beto-03032020-006\t 200303_Beto_generate_integrated(6)\n",
+      "006 generate_integrated starts 1:36\n",
+      "59 [0 -0.3] 3 1 CMAES\n",
+      "59 [0 -0.3] 3 1 ZOHA_Cylind\n",
+      "Test the Cylindrical optimizer's capability!\n",
+      "The cell seems non responding! Or suppressed by image a little bit.\n",
+      "At gen 3 monkey gains motivation suddenly! And firing rate gets high at a second! The firing rate then stays high for a few generations.\n",
+      "Maybe the cell is so suppressed….Both CMAES and Cylind is not very successful.\n",
+      "Why this cell seems not suppressed during RF mapping, but suppressed in Evolution!\n",
+      "Gets to 13 gens.\n",
+      "Give up at 14 gen\n",
+      "Completed\n"
      ]
     },
     {
@@ -338,34 +235,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "200226_Beto_rfMapper_basic  has been recorded in the excel index 138, please check\n",
-      "200226_Beto_rfMapper_basic(1)  has been recorded in the excel index 139, please check\n",
-      "200226_Beto_generate_integrated(1)  has been recorded in the excel index 140, please check\n",
-      "200226_Beto_generate_integrated(2)  has been recorded in the excel index 141, please check\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-45-ee50557dc157>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf_cat\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mconcat_table\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mr\"S:\\ExpSpecTable_Augment.xlsx\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34mr\"D:\\ExpRecord_out.xlsx\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-44-9b11e7b7f8e0>\u001b[0m in \u001b[0;36mconcat_table\u001b[1;34m(df_old, df_new, out_path)\u001b[0m\n\u001b[0;32m     11\u001b[0m             \u001b[0mbreak_flag\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mbreak_flag\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m     \u001b[0mdf_cat\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mdf_old\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mdf_new\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[0mdf_cat\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_excel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mout_path\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: "
-     ]
-    }
-   ],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "df_cat = concat_table(r\"S:\\ExpSpecTable_Augment.xlsx\", r\"D:\\ExpRecord_out.xlsx\")"
    ]
