add animal label

--- a/Evol_ReducedDim_Analysis.ipynb
+++ b/Evol_ReducedDim_Analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -108,11 +108,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def concat_table(df_old, df_new, out_path=None):\n",
+    "def concat_table(df_old, df_new, addexplabel=None, out_path=None):\n",
     "    if isinstance(df_old,str):\n",
     "        out_path = df_old\n",
     "        df_old = pd.read_excel(df_old)\n",
@@ -126,6 +126,8 @@
     "            break_flag = True\n",
     "    if break_flag:\n",
     "        raise ValueError\n",
+    "    if addexplabel is not None:\n",
+    "        df_old.Exp_collection[:] = addexplabel\n",
     "    df_cat = pd.concat([df_old,df_new], axis=0, ignore_index=True)\n",
     "    df_cat.to_excel(out_path,index=False)\n",
     "    return df_cat\n",
@@ -134,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -144,58 +146,112 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Exp 0\t Beto-03032020-001\t 200303_Beto_rfMapper_basic\n",
-      "001 RFMapping\n",
-      "-1.5:0.5:1.5 0.75 deg\n",
-      "24 has a single unit vs hash structure?\n",
+      "Exp 0\t Beto-10022020-001\t 200210_Beto_rfMapper_basic\n",
+      "001 RFMapping  13:35 starts\n",
+      "The Eye calibration takes a lot of time\n",
+      "Monkey seems not in its mood in the Alfa's rig.\n",
+      "Eye signal very bouncy/noisy\n",
       "\n",
-      "Exp 1\t Beto-03032020-002\t 200303_Beto_rfMapper_basic(1)\n",
+      "Exp 1\t Beto-10022020-002\t 200210_Beto_rfMapper_basic(1)\n",
+      "002\n",
+      "2nd rf mapping with smaller image\n",
+      "Seems like a 2 peaks under equator, may be 2 different RF from 2 different unit?\n",
+      "Or is it edge effect, that it's the edge instead of the image center that excites the neuron?\n",
+      "\n",
+      "Exp 2\t Beto-10022020-005\t nan\n",
+      "005\n",
+      "2:18 start, carlos moved eye scan, changed setting in both MonkLogic and iscan computer… looks so much better.\n",
+      "Channel 39 SU, has 2 SU and 1 hash. Doing hash vs SU trial\n",
+      "39 [0,  -0.5]  3 1 CMAES\n",
+      "39 [0,  -0.5]  3 2 CMAES\n",
+      "02:35:00\n",
+      "\n",
+      "Exp 3\t Beto64chan-10022020-004\t 200210_Beto_generate_integrated(6)\n",
+      "004 at 243 PM better isolation\n",
+      "(6)?\n",
+      "now it says alfa….\n",
+      "Evolved images climbing, made it to block 20.\n",
+      "Upped to 200 mL,\n",
+      "Stopped at 3:19, plateaued. We were not using gabor stimuli\n",
+      "complete\n",
+      "\n",
+      "Exp 4\t Beto64chan-10022020-006\t 200210_Beto_selectivity_basic(1)\n",
+      "Selectivity basic, start at 3:22.\n",
+      "Channel 39 [0, -0.5] 3 with gabors\n",
+      "ended\n",
+      "\n",
+      "Exp 5\t Beto-07022020-004\t 200207_Beto_generate_integrated(1)\n",
+      "004 at 1023\n",
+      "SU VS HASH\n",
+      "39 (0,-0.5) 3 1 CMAES, SU 1/5\n",
+      "39 (0,-0.5) 3 2 CMAES\n",
+      "MATLAB CRASHED!!!!!\n",
+      "File seems intact, though\n",
+      "\n",
+      "Exp 6\t Beto-14022020-001\t 200214_Beto_rfMapper_basic(3)\n",
+      "001 RFMapper starts 13:53\n",
+      "Monkey is just not working ….. Sleep for a while\n",
+      "-8:2:8 2 deg image!\n",
+      "Coarse level mapping\n",
+      "RFMapper Basic (3)\n",
+      "Completed\n",
+      "\n",
+      "Exp 7\t Beto-14022020-002\t 200214_Beto_rfMapper_basic(4)\n",
       "002 RFMapping\n",
-      "-8:2:8 2 deg\n",
-      "Chan 24's RF looks good and\n",
-      "003 generate integrated\n",
-      "24 [-0.8 1] 3 1 ZOHA_Cylind\n",
-      "24 [-0.8 1] 3 1 ZOHA_Cylind_ReducDim\n",
-      "Forget to change the reference image!\n",
-      "Abort the exp\n",
-      "Aborted\n",
-      "\n",
-      "Exp 2\t Beto-03032020-004\t 200303_Beto_generate_integrated(4)\n",
-      "004 generate_integrated starts 12:35\n",
-      "Change the reference image!\n",
-      "24 [-0.8 1] 3 1 ZOHA_Cylind\n",
-      "24 [-0.8 1] 3 1 ZOHA_Cylind_ReducDim\n",
-      "The reduced dimension one evolved, the full space didn't\n",
-      "Seems the major contribution to evolution is the initial activity peak in the response.\n",
-      "The high noise caused the norm evolution not working totally! So in full evolution, the Optimizer stuck at low norm and still live in noise.\n",
-      "The low variability problem is big!\n",
-      "Or maybe the norm evolution is not well controlled.\n",
-      "Interesting case study.….\n",
+      "Monkey\n",
+      "-1.5:0.5:1.5 1deg image\n",
+      "It works well!!\n",
+      "Also a 2 peak 2 spot Receptive field, This time there is a major one and a minor one.\n",
+      "Finish 4 blocks in 5 mins!\n",
+      "RFMapper Basic (4)\n",
       "Completed\n",
       "\n",
-      "Exp 3\t Beto-03032020-005\t 200303_Beto_generate_integrated(5)\n",
-      "005generate_integrated starts 1:01\n",
-      "24 [-0.8 1] 3 1 CMAES\n",
-      "24 [-0.8 1] 3 2 CMAES\n",
-      "SU vs Hash type experiment! Also want to check if CMA is able to evolve from this thing. \n",
-      "He started today around noon, so working for 1.5 hr so far\n",
-      "130 ms reward\n",
-      "The \"SU\" seems moving towards the hash, and the score gets lower. (Lose the unit totally)\n",
-      "Interesting case study.….\n",
-      "Completed\n",
+      "Exp 8\t Beto-14022020-003\t 200214_Beto_generate_integrated(1)\n",
+      "003 generate_integrated 48 mins\n",
+      "39 [0, -0.2] 3 1 CMAES\n",
+      "39 [0, -0.2] 3 2 CMAES\n",
+      "Start at 2:23\n",
+      "This will be the only experiment for the day, so giving him lots of water\n",
+      "Seems The reference images are not copied correctly but seems fine!(forget to use Gabor stimuli)\n",
+      "Nice Evolution.\n",
+      "Finished 15:13 Completed\n",
       "\n",
-      "Exp 4\t Beto-03032020-006\t 200303_Beto_generate_integrated(6)\n",
-      "006 generate_integrated starts 1:36\n",
-      "59 [0 -0.3] 3 1 CMAES\n",
-      "59 [0 -0.3] 3 1 ZOHA_Cylind\n",
-      "Test the Cylindrical optimizer's capability!\n",
-      "The cell seems non responding! Or suppressed by image a little bit.\n",
-      "At gen 3 monkey gains motivation suddenly! And firing rate gets high at a second! The firing rate then stays high for a few generations.\n",
-      "Maybe the cell is so suppressed….Both CMAES and Cylind is not very successful.\n",
-      "Why this cell seems not suppressed during RF mapping, but suppressed in Evolution!\n",
-      "Gets to 13 gens.\n",
-      "Give up at 14 gen\n",
-      "Completed\n"
+      "Exp 9\t Beto-19022020-004\t 200219_Beto_generate_integrated(1)\n",
+      "004 generate_integrated starts 14:23 (go for 90 mins)\n",
+      "ITI 390-500ms it's normal!\n",
+      "25 [0 0 ] 3 1 CMAES\n",
+      "25 [0 0 ] 3 2 CMAES\n",
+      "seems the Hash is not very evolvable.???\n",
+      "PSTH have visually responsive component but not very large?\n",
+      "25 A evolves as normal, and 25 B is not very responsive….? But starts to evolve at 13\n",
+      "Hash evolution is just not very successful .\n",
+      "Complete\n",
+      "\n",
+      "Exp 10\t Beto-20022020-001\t 200220_Beto_rfMapper_basic\n",
+      "Hp at 930\n",
+      "001 at 950 AM\n",
+      "GOTTA FIX THAT WAITING FOR DATA ACQUISITION TO START TIMEOUT\n",
+      "nice SU in 41\n",
+      "still getting header words do not match error sometimes.\n",
+      "he's not that engaged. 21 correct trials in 7 minutes. Yikes.\n",
+      "850 ITI. Gotta fix that.\n",
+      "15 minutes in, 65 trials. Oof.\n",
+      "that 41 is not super responsive\n",
+      "\n",
+      "Exp 11\t Beto-20022020-002\t 200220_Beto_rfMapper_basic(1)\n",
+      "002 at 1012 AM\n",
+      "rf mapping, finer grid\n",
+      "\n",
+      "Exp 12\t Beto-20022020-003\t 200220_Beto_generate_integrated\n",
+      "003 at 1030 AM\n",
+      "integrated, SU vs hash\n",
+      "41, (0,-0.5) 3 1 'CMAES'\n",
+      "41 (0,-0.5) 3 2 'CMAES'\n",
+      "Block 23, still climbing, added 30 aq reward with 100 ms\n",
+      "Stopped at 11:26, 28 blocks complete\n",
+      "\n",
+      "Exp 0\t Beto-10022020-001\t 200210_Beto_rfMapper_basic\n",
+      ".\n"
      ]
     },
     {
@@ -214,6 +270,10 @@
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:47: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
       "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:45: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
@@ -224,7 +284,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 stimuli missing\n"
+      "\n",
+      "Exp 1\t Beto-10022020-002\t 200210_Beto_rfMapper_basic(1)\n",
+      ".\n",
+      "\n",
+      "Exp 4\t Beto64chan-10022020-006\t 200210_Beto_selectivity_basic(1)\n",
+      "\n",
+      "\n",
+      "Exp 10\t Beto-20022020-001\t 200220_Beto_rfMapper_basic\n",
+      "\n",
+      "\n",
+      "Exp 11\t Beto-20022020-002\t 200220_Beto_rfMapper_basic(1)\n",
+      "\n",
+      "5 stimuli missing\n"
      ]
     }
    ],
@@ -235,11 +307,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_sort.Exp_collection[:] = \"SUHash\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:16: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  app.launch_new_instance()\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_cat = concat_table(r\"S:\\ExpSpecTable_Augment.xlsx\", r\"D:\\ExpRecord_out.xlsx\", addexplabel=\"SUHash\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_cat = concat_table(r\"S:\\ExpSpecTable_Augment.xlsx\", r\"D:\\ExpRecord_out.xlsx\")"
+    "!S:\\ExpSpecTable_Augment.xlsx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The process cannot access the file because it is being used by another process.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!S:\\Exp_Record_Alfa.xlsx"
    ]
   },
   {
@@ -376,13 +509,6 @@
     "%  ExpSpecTable_Aug.Expi<=5 & ExpSpecTable_Aug.Expi>=4 & ...\n",
     "[meta_new,rasters_new,lfps_new,Trials_new] = Project_Manifold_Beto_loadRaw(find(expftr)); "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
