Debug the Optimizer comparison code for Alfa

--- a/Evol_ReducedDim_Analysis.ipynb
+++ b/Evol_ReducedDim_Analysis.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
     "    if break_flag:\n",
     "        raise ValueError\n",
     "    if addexplabel is not None:\n",
-    "        df_old.Exp_collection[:] = addexplabel\n",
+    "        df_new.Exp_collection[:] = addexplabel\n",
     "    df_cat = pd.concat([df_old,df_new], axis=0, ignore_index=True)\n",
     "    df_cat.to_excel(out_path,index=False)\n",
     "    return df_cat\n",
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {
     "scrolled": true
    },
@@ -146,112 +146,61 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Exp 0\t Beto-10022020-001\t 200210_Beto_rfMapper_basic\n",
-      "001 RFMapping  13:35 starts\n",
-      "The Eye calibration takes a lot of time\n",
-      "Monkey seems not in its mood in the Alfa's rig.\n",
-      "Eye signal very bouncy/noisy\n",
+      "Exp 0\t Alfa64chan-10032020-001\t 200310_Alfa_rfMapper_basic\n",
+      "001 RF Mapping\n",
+      "[0 0 ] 0.75 deg -1.5:1.5\n",
+      "Ch 8 seems a good one\n",
+      "4 mins 5 blocks\n",
       "\n",
-      "Exp 1\t Beto-10022020-002\t 200210_Beto_rfMapper_basic(1)\n",
-      "002\n",
-      "2nd rf mapping with smaller image\n",
-      "Seems like a 2 peaks under equator, may be 2 different RF from 2 different unit?\n",
-      "Or is it edge effect, that it's the edge instead of the image center that excites the neuron?\n",
+      "Exp 1\t Alfa64chan-10032020-002\t 200310_Alfa_rfMapper_basic(1)\n",
+      "002 RF Mapping\n",
+      "[0 0 ] 2 deg -8:2:8\n",
+      "Bigger image rf mapping\n",
+      "Center starts to appear\n",
+      "8 mins 7 blocks\n",
       "\n",
-      "Exp 2\t Beto-10022020-005\t nan\n",
-      "005\n",
-      "2:18 start, carlos moved eye scan, changed setting in both MonkLogic and iscan computer… looks so much better.\n",
-      "Channel 39 SU, has 2 SU and 1 hash. Doing hash vs SU trial\n",
-      "39 [0,  -0.5]  3 1 CMAES\n",
-      "39 [0,  -0.5]  3 2 CMAES\n",
-      "02:35:00\n",
+      "Exp 2\t Alfa64chan-10032020-003\t 200310_Alfa_generate_integrated(1)\n",
+      "003 Generate Integrated starts 13:50\n",
+      "13 [-0.8 -1.3 ] CMAES\n",
+      "13 [-0.8 -1.3 ] ZOHA_Sphere_lr\n",
+      "Lr schedule, 70deg to 7.33 deg in 100 generations.\n",
+      "Optimizer compare\n",
+      "CMAES and ZOHA all struggle to take off\n",
+      "Maybe this is too noisy….. Should choose a cleaner signal than this\n",
+      "15 mins finish 20 blocks of parallel evolution….Works like machine\n",
+      "Neither is successful.… cannot say anything\n",
       "\n",
-      "Exp 3\t Beto64chan-10022020-004\t 200210_Beto_generate_integrated(6)\n",
-      "004 at 243 PM better isolation\n",
-      "(6)?\n",
-      "now it says alfa….\n",
-      "Evolved images climbing, made it to block 20.\n",
-      "Upped to 200 mL,\n",
-      "Stopped at 3:19, plateaued. We were not using gabor stimuli\n",
-      "complete\n",
+      "Exp 3\t Alfa64chan-10032020-004\t 200310_Alfa_generate_integrated(2)\n",
+      "004 Generate Integrated Starts 14:12\n",
+      "8 [-0 -0 ] 1 CMAES\n",
+      "8 [-0 -0 ] 1 ZOHA_Sphere_lr\n",
+      "According to the ref images, it really likes black white grating things.\n",
+      "Cant see eye, close out after this one.\n",
+      "Note the response onset is pretty late! ~ 100ms\n",
+      "22min 23 blocks~\n",
+      "Terminate around 30, see if we can do better\n",
       "\n",
-      "Exp 4\t Beto64chan-10022020-006\t 200210_Beto_selectivity_basic(1)\n",
-      "Selectivity basic, start at 3:22.\n",
-      "Channel 39 [0, -0.5] 3 with gabors\n",
-      "ended\n",
+      "Exp 4\t Alfa64chan-10032020-005\t 200310_Alfa_generate_integrated(3)\n",
+      "005 Generate Integrated Starts 14:48\n",
+      "20 [-0 -3.5 ] 1 CMAES\n",
+      "20 [-0 -3.5 ] 1 ZOHA_Sphere_lr\n",
+      "Used the reference from last GI…..PSTH looks health and good!\n",
+      "Response is healthy but the Score isn't going up very well…. Stays the same basically.\n",
+      "Seems CMAES goes up around 15 gens, not significantly but good. ZOHA is always fluctuating.\n",
+      "ZOHA beat by CMAES!\n",
+      "40 mins\n",
       "\n",
-      "Exp 5\t Beto-07022020-004\t 200207_Beto_generate_integrated(1)\n",
-      "004 at 1023\n",
-      "SU VS HASH\n",
-      "39 (0,-0.5) 3 1 CMAES, SU 1/5\n",
-      "39 (0,-0.5) 3 2 CMAES\n",
-      "MATLAB CRASHED!!!!!\n",
-      "File seems intact, though\n",
-      "\n",
-      "Exp 6\t Beto-14022020-001\t 200214_Beto_rfMapper_basic(3)\n",
-      "001 RFMapper starts 13:53\n",
-      "Monkey is just not working ….. Sleep for a while\n",
-      "-8:2:8 2 deg image!\n",
-      "Coarse level mapping\n",
-      "RFMapper Basic (3)\n",
-      "Completed\n",
-      "\n",
-      "Exp 7\t Beto-14022020-002\t 200214_Beto_rfMapper_basic(4)\n",
-      "002 RFMapping\n",
-      "Monkey\n",
-      "-1.5:0.5:1.5 1deg image\n",
-      "It works well!!\n",
-      "Also a 2 peak 2 spot Receptive field, This time there is a major one and a minor one.\n",
-      "Finish 4 blocks in 5 mins!\n",
-      "RFMapper Basic (4)\n",
-      "Completed\n",
-      "\n",
-      "Exp 8\t Beto-14022020-003\t 200214_Beto_generate_integrated(1)\n",
-      "003 generate_integrated 48 mins\n",
-      "39 [0, -0.2] 3 1 CMAES\n",
-      "39 [0, -0.2] 3 2 CMAES\n",
-      "Start at 2:23\n",
-      "This will be the only experiment for the day, so giving him lots of water\n",
-      "Seems The reference images are not copied correctly but seems fine!(forget to use Gabor stimuli)\n",
-      "Nice Evolution.\n",
-      "Finished 15:13 Completed\n",
-      "\n",
-      "Exp 9\t Beto-19022020-004\t 200219_Beto_generate_integrated(1)\n",
-      "004 generate_integrated starts 14:23 (go for 90 mins)\n",
-      "ITI 390-500ms it's normal!\n",
-      "25 [0 0 ] 3 1 CMAES\n",
-      "25 [0 0 ] 3 2 CMAES\n",
-      "seems the Hash is not very evolvable.???\n",
-      "PSTH have visually responsive component but not very large?\n",
-      "25 A evolves as normal, and 25 B is not very responsive….? But starts to evolve at 13\n",
-      "Hash evolution is just not very successful .\n",
-      "Complete\n",
-      "\n",
-      "Exp 10\t Beto-20022020-001\t 200220_Beto_rfMapper_basic\n",
-      "Hp at 930\n",
-      "001 at 950 AM\n",
-      "GOTTA FIX THAT WAITING FOR DATA ACQUISITION TO START TIMEOUT\n",
-      "nice SU in 41\n",
-      "still getting header words do not match error sometimes.\n",
-      "he's not that engaged. 21 correct trials in 7 minutes. Yikes.\n",
-      "850 ITI. Gotta fix that.\n",
-      "15 minutes in, 65 trials. Oof.\n",
-      "that 41 is not super responsive\n",
-      "\n",
-      "Exp 11\t Beto-20022020-002\t 200220_Beto_rfMapper_basic(1)\n",
-      "002 at 1012 AM\n",
-      "rf mapping, finer grid\n",
-      "\n",
-      "Exp 12\t Beto-20022020-003\t 200220_Beto_generate_integrated\n",
-      "003 at 1030 AM\n",
-      "integrated, SU vs hash\n",
-      "41, (0,-0.5) 3 1 'CMAES'\n",
-      "41 (0,-0.5) 3 2 'CMAES'\n",
-      "Block 23, still climbing, added 30 aq reward with 100 ms\n",
-      "Stopped at 11:26, 28 blocks complete\n",
-      "\n",
-      "Exp 0\t Beto-10022020-001\t 200210_Beto_rfMapper_basic\n",
-      ".\n"
+      "Exp 5\t Alfa64chan-10032020-006\t 200310_Alfa_generate_integrated(4)\n",
+      "006 Generate Integrated starts 15:29\n",
+      "48  [-0.2 -0.4 ] 1 CMAES\n",
+      "48  [-0.2 -0.4 ] 1 ZOHA_Sphere_lr\n",
+      "Maybe we should try a simple cell in V1 V4 to see if anything is working or not .\n",
+      "Health transient response of V1\n",
+      "2 optimizers go up and down consistently\n",
+      "25 mins 11 blocks.\n",
+      "CMA-ES evolves a second peak!!! Insane! Will be interesting to see if there is any correlated signal in the 2nd peak.\n",
+      "16 gens the 2nd peak evolve even greater!\n",
+      "40 mins 16 blocks\n"
      ]
     },
     {
@@ -270,10 +219,6 @@
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:47: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
       "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:45: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
@@ -284,25 +229,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Exp 1\t Beto-10022020-002\t 200210_Beto_rfMapper_basic(1)\n",
-      ".\n",
-      "\n",
-      "Exp 4\t Beto64chan-10022020-006\t 200210_Beto_selectivity_basic(1)\n",
-      "\n",
-      "\n",
-      "Exp 10\t Beto-20022020-001\t 200220_Beto_rfMapper_basic\n",
-      "\n",
-      "\n",
-      "Exp 11\t Beto-20022020-002\t 200220_Beto_rfMapper_basic(1)\n",
-      "\n",
-      "5 stimuli missing\n"
+      "0 stimuli missing\n"
      ]
     }
    ],
    "source": [
-    "Animal = \"Beto\" # \"Alfa\" \"ALfa\"\n",
+    "Animal = \"Alfa\" # \"Alfa\" \"ALfa\"\n",
     "df_sort = process_concat_cells(r\"D:\\ExpRecord_tmp.xlsx\", \"D:\\ExpRecord_out.xlsx\", animal=\"Beto\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:16: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  app.launch_new_instance()\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:17: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
+      "of pandas will change to not sort by default.\n",
+      "\n",
+      "To accept the future behavior, pass 'sort=True'.\n",
+      "\n",
+      "To retain the current behavior and silence the warning, pass sort=False\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "if Animal == \"Beto\":\n",
+    "    table_old = r\"S:\\ExpSpecTable_Augment.xlsx\"\n",
+    "elif Animal == \"Alfa\":\n",
+    "    table_old = r\"S:\\Exp_Record_Alfa.xlsx\"\n",
+    "df_cat = concat_table(table_old, r\"D:\\ExpRecord_out.xlsx\", addexplabel=\"Optim_tuning\")"
    ]
   },
   {
@@ -328,30 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:16: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  app.launch_new_instance()\n"
-     ]
-    }
-   ],
-   "source": [
-    "df_cat = concat_table(r\"S:\\ExpSpecTable_Augment.xlsx\", r\"D:\\ExpRecord_out.xlsx\", addexplabel=\"SUHash\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
